--- a/environment.yml
+++ b/environment.yml
@@ -1,9 +1,8 @@
 name: emurestapi
 channels:
 - conda-forge
-- defaults
 dependencies:
-- python >= 3.11
+- python>=3.11,<3.14
 - pip
 - ipykernel
 - jupyter
